# systemdspawner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  check-kernel.bash  jupyter-singleuser@.service  jupyterhub.service  pyproject.toml  setup.py
.github/workflows/: release.yaml  test.yaml
examples/: README.md  jupyterhub.service
systemdspawner/: __init__.py  nontransientspawner.py  staticsystemdspawner.py  systemd.py  systemdspawner.py
tests/: conftest.py  test_systemd.py  test_systemdspawner.py
