[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterhub-systemdspawner"
dynamic = ["version"]
description = "JupyterHub Spawner using systemd for resource isolation"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  { name = "Jupyter Contributors", email = "jupyter@googlegroups.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "jupyterhub>=3.1.1",
  "tornado>=6.1",
]

[project.urls]
Source = "https://github.com/jupyterhub/systemdspawner"
Issues = "https://github.com/jupyterhub/systemdspawner/issues"
[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-jupyterhub",
]

[project.entry-points."jupyterhub.spawners"]
systemd = "systemdspawner:SystemdSpawner"
systemdspawner = "systemdspawner:SystemdSpawner"

[tool.hatch.build.targets.wheel]
# need to specify package name because it doesn't match project.name
packages = ["systemdspawner"]

[tool.hatch.version]
path = "systemdspawner/__init__.py"

# autoflake is used for autoformatting Python code
#
# ref: https://github.com/PyCQA/autoflake#readme
#
[tool.autoflake]
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true


# isort is used for autoformatting Python code
#
# ref: https://pycqa.github.io/isort/
#
[tool.isort]
profile = "black"


# pytest is used for running Python based tests
#
# ref: https://docs.pytest.org/en/stable/
#
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10"
asyncio_mode = "auto"
testpaths = ["tests"]
# warnings we can safely ignore stemming from jupyterhub 3 + sqlalchemy 2
filterwarnings = [
    'ignore:.*The new signature is "def engine_connect\(conn\)"*:sqlalchemy.exc.SADeprecationWarning',
    'ignore:.*The new signature is "def engine_connect\(conn\)"*:sqlalchemy.exc.SAWarning',
]


# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump]
github_url = "https://github.com/jupyterhub/systemdspawner"

[tool.tbump.version]
current = "1.0.3.dev"
regex = '''
    (?P<major>\d+)
    \.
    (?P<minor>\d+)
    \.
    (?P<patch>\d+)
    (?P<pre>((a|b|rc)\d+)|)
    \.?
    (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "systemdspawner/__init__.py"
